fixing scroll issue on mobile

--- a/assets/scss/_partials/components/_header.scss
+++ b/assets/scss/_partials/components/_header.scss
@@ -111,7 +111,6 @@ left: 50%;
     left: 0;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     background: #ffffff;
     z-index: 999999;
     padding-top: 5rem;
