--- a/assets/scss/_partials/pages/_home.scss
+++ b/assets/scss/_partials/pages/_home.scss
@@ -122,6 +122,7 @@
 
 .sign-detail{
     height: calc(100vh - 78px);
+    overflow: hidden;
     section{
         padding: 0;
     }
